--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ body {
 }
 
 .logo img {
-  width: 150px;
-  height: auto;
-  max-height: 50px;
+  width: 180px;
+  height: 50px;
 }
 
 .nav-link {
@@ -34,26 +33,6 @@ body {
 
 .nav-link:hover {
   color: #34228e;
-}
-
-.openac h5 {
-  color: #34228e;
-  font-weight: 600;
-}
-
-.btn-outline-success a.nav-link {
-  color: #28a745;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.btn-outline-success:hover {
-  background-color: #28a745;
-  border-color: #28a745;
-}
-
-.btn-outline-success:hover a.nav-link {
-  color: #fff;
 }
 
 
